Add provisioning for grafana

--- a/grafana/Dockerfile
+++ b/grafana/Dockerfile
@@ -1,3 +1,5 @@
 FROM grafana/grafana
 
-COPY provisioning/ /usr/share/grafana/conf/provisioning
+COPY dashboards/ /var/lib/grafana/dashboards
+COPY provisioning/ /etc/grafana/provisioning
+COPY grafana.ini /etc/grafana/grafana.ini
