--- a/grafana/Dockerfile
+++ b/grafana/Dockerfile
@@ -1,5 +1,5 @@
 FROM grafana/grafana
 
-COPY dashboards/ /var/lib/grafana/dashboards
+COPY built-in-dashboards/ /var/lib/grafana/dashboards
 COPY provisioning/ /etc/grafana/provisioning
 COPY grafana.ini /etc/grafana/grafana.ini
