--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -6,8 +6,6 @@ global:
 
 scrape_configs:
     - job_name: 'local-lighthouse'
-
       scrape_interval: 5s
-
       static_configs:
-          - targets: ['beacon_node:5052']
+          - targets: ['beacon_node:5052', 'boot_node:5052']
