--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
         build:
             context: lighthouse
         command: sh run_beacon_node.sh
-    beacon_node:
+    beacon_node_1:
         build:
             context: lighthouse
         depends_on:
@@ -27,15 +27,64 @@ services:
         environment:
             BOOT_NODES: "/dns4/boot_node/tcp/9000"
         command: sh run_beacon_node.sh
-    validator_client:
+    beacon_node_2:
+        build:
+            context: lighthouse
+        depends_on:
+            - boot_node
+        command: sh run_beacon_node.sh
+        environment:
+            BOOT_NODES: "/dns4/boot_node/tcp/9000"
+        command: sh run_beacon_node.sh
+    beacon_node_3:
+        build:
+            context: lighthouse
+        depends_on:
+            - boot_node
+        command: sh run_beacon_node.sh
+        environment:
+            BOOT_NODES: "/dns4/boot_node/tcp/9000"
+        command: sh run_beacon_node.sh
+    beacon_node_4:
+        build:
+            context: lighthouse
+        depends_on:
+            - boot_node
+        command: sh run_beacon_node.sh
+        environment:
+            BOOT_NODES: "/dns4/boot_node/tcp/9000"
+        command: sh run_beacon_node.sh
+    validator_client_1:
         build:
             context: lighthouse
         environment:
-            BEACON_NODE: "beacon_node"
+            BEACON_NODE: "beacon_node_1"
             FIRST_VALIDATOR: 0
-            NUM_VALIDATORS: 16
-        depends_on:
-            - beacon_node
+            NUM_VALIDATORS: 4
+        command: sh run_validator_client.sh
+    validator_client_2:
+        build:
+            context: lighthouse
+        environment:
+            BEACON_NODE: "beacon_node_2"
+            FIRST_VALIDATOR: 4
+            NUM_VALIDATORS: 4
+        command: sh run_validator_client.sh
+    validator_client_3:
+        build:
+            context: lighthouse
+        environment:
+            BEACON_NODE: "beacon_node_3"
+            FIRST_VALIDATOR: 8
+            NUM_VALIDATORS: 4
+        command: sh run_validator_client.sh
+    validator_client_4:
+        build:
+            context: lighthouse
+        environment:
+            BEACON_NODE: "beacon_node_4"
+            FIRST_VALIDATOR: 12
+            NUM_VALIDATORS: 4
         command: sh run_validator_client.sh
 
 volumes:
