Use common LH image, add makefile to build it

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,10 +15,12 @@ services:
         ports:
             - 3000:3000
     boot_node:
+        image: lighthouse:prebuilt
         build:
             context: lighthouse
         command: sh run_beacon_node.sh
     beacon_node_1:
+        image: lighthouse:prebuilt
         build:
             context: lighthouse
         depends_on:
@@ -28,6 +30,7 @@ services:
             BOOT_NODES: "/dns4/boot_node/tcp/9000"
         command: sh run_beacon_node.sh
     beacon_node_2:
+        image: lighthouse:prebuilt
         build:
             context: lighthouse
         depends_on:
@@ -37,6 +40,7 @@ services:
             BOOT_NODES: "/dns4/boot_node/tcp/9000"
         command: sh run_beacon_node.sh
     beacon_node_3:
+        image: lighthouse:prebuilt
         build:
             context: lighthouse
         depends_on:
@@ -46,6 +50,7 @@ services:
             BOOT_NODES: "/dns4/boot_node/tcp/9000"
         command: sh run_beacon_node.sh
     beacon_node_4:
+        image: lighthouse:prebuilt
         build:
             context: lighthouse
         depends_on:
@@ -55,6 +60,7 @@ services:
             BOOT_NODES: "/dns4/boot_node/tcp/9000"
         command: sh run_beacon_node.sh
     validator_client_1:
+        image: lighthouse:prebuilt
         build:
             context: lighthouse
         environment:
@@ -63,6 +69,7 @@ services:
             NUM_VALIDATORS: 4
         command: sh run_validator_client.sh
     validator_client_2:
+        image: lighthouse:prebuilt
         build:
             context: lighthouse
         environment:
@@ -71,6 +78,7 @@ services:
             NUM_VALIDATORS: 4
         command: sh run_validator_client.sh
     validator_client_3:
+        image: lighthouse:prebuilt
         build:
             context: lighthouse
         environment:
@@ -79,6 +87,7 @@ services:
             NUM_VALIDATORS: 4
         command: sh run_validator_client.sh
     validator_client_4:
+        image: lighthouse:prebuilt
         build:
             context: lighthouse
         environment:
