Export HTTP for boot node

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,8 @@ services:
     boot_node:
         image: lighthouse:feature
         command: sh run_beacon_node.sh
+        ports:
+            - 5052:5052
     beacon_node_1:
         image: lighthouse:feature
         depends_on:
