Ensure feature docker image pulls code

--- a/lighthouse/feature/Dockerfile
+++ b/lighthouse/feature/Dockerfile
@@ -1,6 +1,7 @@
 FROM lighthouse:master
 
 RUN cd lighthouse && git checkout docker-env
+RUN cd lighthouse && git pull
 
 RUN cd lighthouse && cargo fetch
 RUN cd lighthouse && cargo build --release --bin beacon_node
