Fix grafana built-in dashboard loading

--- a/grafana/provisioning/dashboards/dashboards.yaml
+++ b/grafana/provisioning/dashboards/dashboards.yaml
@@ -19,4 +19,4 @@ providers:
   updateIntervalSeconds: 10
   options:
     # <string, required> path to dashboard files on disk. Required
-    path: /var/lib/grafana/dashboards
+    path: /home/dashboards
