Fix paths for TOML configs

--- a/lighthouse/feature/Dockerfile
+++ b/lighthouse/feature/Dockerfile
@@ -8,12 +8,12 @@ RUN cd lighthouse && cargo build --release --bin beacon_node
 RUN cd lighthouse && cargo build --release --bin validator_client
 RUN cd lighthouse && cargo build --release --bin account_manager
 
-RUN mkdir ~/.lighthouse
-RUN mkdir ~/.lighthouse-validator
+RUN mkdir /root/.lighthouse
+RUN mkdir /root/.lighthouse-validator
 
-COPY ./configs/beacon-node.toml ~/.lighthouse
-COPY ./configs/eth2-spec.toml ~/.lighthouse
-COPY ./configs/validator-client.toml ~/.lighthouse-validator
-COPY ./configs/eth2-spec.toml ~/.lighthouse-validator
+COPY ./configs/beacon-node.toml /root/.lighthouse/beacon-node.toml
+COPY ./configs/eth2-spec.toml /root/.lighthouse/eth2-spec.toml
+COPY ./configs/validator-client.toml /root/.lighthouse-validator/validator-client.toml
+COPY ./configs/eth2-spec.toml /root/.lighthouse-validator/eth2-spec.toml
 
 COPY ./scripts/ .
