--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
             - prometheus-data:/prometheus
         ports:
             - 9090:9090
+        networks:
+            - beacon_nodes
     grafana:
         build:
             context: grafana
@@ -14,6 +16,8 @@ services:
             - grafana-data:/var/lib/grafana
         ports:
             - 3000:3000
+        networks:
+            - beacon_nodes
     boot_node:
         image: lighthouse:feature
         command: sh run_beacon_node.sh
@@ -24,10 +28,10 @@ services:
             - 5051:5051
             - 5052:5052
         environment:
-            DISCOVERY_ADDR: "172.20.0.250"
+            DISCOVERY_ADDR: "172.42.0.250"
         networks:
-            default:
-                ipv4_address: 172.20.0.250
+            beacon_nodes:
+                ipv4_address: 172.42.0.250
     beacon_node_1:
         image: lighthouse:feature
         depends_on:
@@ -35,6 +39,8 @@ services:
         volumes:
             - boot-node:/bootnode
         command: sh run_beacon_node.sh
+        networks:
+            - beacon_nodes
     beacon_node_2:
         image: lighthouse:feature
         depends_on:
@@ -42,6 +48,8 @@ services:
         volumes:
             - boot-node:/bootnode
         command: sh run_beacon_node.sh
+        networks:
+            - beacon_nodes
     beacon_node_3:
         image: lighthouse:feature
         depends_on:
@@ -49,6 +57,8 @@ services:
         volumes:
             - boot-node:/bootnode
         command: sh run_beacon_node.sh
+        networks:
+            - beacon_nodes
     beacon_node_4:
         image: lighthouse:feature
         depends_on:
@@ -56,6 +66,8 @@ services:
         volumes:
             - boot-node:/bootnode
         command: sh run_beacon_node.sh
+        networks:
+            - beacon_nodes
     validator_client_1:
         image: lighthouse:feature
         environment:
@@ -63,6 +75,8 @@ services:
             FIRST_VALIDATOR: 0
             NUM_VALIDATORS: 4
         command: sh run_validator_client.sh
+        networks:
+            - beacon_nodes
     validator_client_2:
         image: lighthouse:feature
         environment:
@@ -70,6 +84,8 @@ services:
             FIRST_VALIDATOR: 4
             NUM_VALIDATORS: 4
         command: sh run_validator_client.sh
+        networks:
+            - beacon_nodes
     validator_client_3:
         image: lighthouse:feature
         environment:
@@ -77,6 +93,8 @@ services:
             FIRST_VALIDATOR: 8
             NUM_VALIDATORS: 4
         command: sh run_validator_client.sh
+        networks:
+            - beacon_nodes
     validator_client_4:
         image: lighthouse:feature
         environment:
@@ -84,6 +102,8 @@ services:
             FIRST_VALIDATOR: 12
             NUM_VALIDATORS: 4
         command: sh run_validator_client.sh
+        networks:
+            - beacon_nodes
 
 volumes:
     grafana-data:
@@ -91,8 +111,8 @@ volumes:
     boot-node:
 
 networks:
-    default:
+    beacon_nodes:
         ipam:
             driver: default
             config:
-                - subnet: 172.20.0.0/24
+                - subnet: 172.42.0.0/24
