--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,9 +19,12 @@ services:
         networks:
             - beacon_nodes
     boot_node:
-        image: lighthouse:feature
+        build:
+            context: lighthouse
         command: sh run_beacon_node.sh
         volumes:
+            - ./lighthouse/repo:/root/lighthouse
+            - ./lighthouse/cargo-cache:/root/.cargo
             - boot-node:/root/.lighthouse/network
         ports:
             - 9000:9000
@@ -33,75 +36,103 @@ services:
             beacon_nodes:
                 ipv4_address: 172.42.0.250
     beacon_node_1:
-        image: lighthouse:feature
+        build:
+            context: lighthouse
         depends_on:
             - boot_node
         volumes:
+            - ./lighthouse/repo:/root/lighthouse
+            - ./lighthouse/cargo-cache:/root/.cargo
             - boot-node:/bootnode
         command: sh run_beacon_node.sh
         networks:
             - beacon_nodes
     beacon_node_2:
-        image: lighthouse:feature
+        build:
+            context: lighthouse
         depends_on:
             - boot_node
         volumes:
+            - ./lighthouse/repo:/root/lighthouse
+            - ./lighthouse/cargo-cache:/root/.cargo
             - boot-node:/bootnode
         command: sh run_beacon_node.sh
         networks:
             - beacon_nodes
     beacon_node_3:
-        image: lighthouse:feature
+        build:
+            context: lighthouse
         depends_on:
             - boot_node
         volumes:
+            - ./lighthouse/repo:/root/lighthouse
+            - ./lighthouse/cargo-cache:/root/.cargo
             - boot-node:/bootnode
         command: sh run_beacon_node.sh
         networks:
             - beacon_nodes
     beacon_node_4:
-        image: lighthouse:feature
+        build:
+            context: lighthouse
         depends_on:
             - boot_node
         volumes:
+            - ./lighthouse/repo:/root/lighthouse
+            - ./lighthouse/cargo-cache:/root/.cargo
             - boot-node:/bootnode
         command: sh run_beacon_node.sh
         networks:
             - beacon_nodes
     validator_client_1:
-        image: lighthouse:feature
+        build:
+            context: lighthouse
         environment:
             BEACON_NODE: "beacon_node_1"
             FIRST_VALIDATOR: 0
             NUM_VALIDATORS: 4
         command: sh run_validator_client.sh
+        volumes:
+            - ./lighthouse/repo:/root/lighthouse
+            - ./lighthouse/cargo-cache:/root/.cargo
         networks:
             - beacon_nodes
     validator_client_2:
-        image: lighthouse:feature
+        build:
+            context: lighthouse
         environment:
             BEACON_NODE: "beacon_node_2"
             FIRST_VALIDATOR: 4
             NUM_VALIDATORS: 4
         command: sh run_validator_client.sh
+        volumes:
+            - ./lighthouse/repo:/root/lighthouse
+            - ./lighthouse/cargo-cache:/root/.cargo
         networks:
             - beacon_nodes
     validator_client_3:
-        image: lighthouse:feature
+        build:
+            context: lighthouse
         environment:
             BEACON_NODE: "beacon_node_3"
             FIRST_VALIDATOR: 8
             NUM_VALIDATORS: 4
         command: sh run_validator_client.sh
+        volumes:
+            - ./lighthouse/repo:/root/lighthouse
+            - ./lighthouse/cargo-cache:/root/.cargo
         networks:
             - beacon_nodes
     validator_client_4:
-        image: lighthouse:feature
+        build:
+            context: lighthouse
         environment:
             BEACON_NODE: "beacon_node_4"
             FIRST_VALIDATOR: 12
             NUM_VALIDATORS: 4
         command: sh run_validator_client.sh
+        volumes:
+            - ./lighthouse/repo:/root/lighthouse
+            - ./lighthouse/cargo-cache:/root/.cargo
         networks:
             - beacon_nodes
 
@@ -109,6 +140,7 @@ volumes:
     grafana-data:
     prometheus-data:
     boot-node:
+    repo:
 
 networks:
     beacon_nodes:
