--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,94 @@
+# Lighthouse Docker-Compose
+#
+# This docker-compose environment provides a testing environment for beacon
+# node and validator client binary instance.
+
 version: "3.7"
+
+# The "x-" prefixed objects are extension fields
+#
+# See: https://docs.docker.com/compose/compose-file/#variable-substitution
+
+# Base object for a validator client container.
+x-validator_client:
+    &validator_client
+    image: lighthouse:docker-testnet
+    volumes:
+        - ./lighthouse/repo:/root/lighthouse
+        - ./lighthouse/cargo-cache:/root/.cargo
+    networks:
+        - beacon_nodes
+    command: sh run_validator_client.sh
+
+# Base object for a beacon node container.
+x-beacon_node:
+    &beacon_node
+    image: lighthouse:docker-testnet
+    volumes:
+        - ./lighthouse/repo:/root/lighthouse
+        - ./lighthouse/cargo-cache:/root/.cargo
+        - ./lighthouse/boot-node:/root/boot-node
+    networks:
+        - beacon_nodes
+    depends_on:
+        - boot_node
+    command: sh run_beacon_node.sh
+
+
 services:
+    # The boot node has a different setup to the other beacon nodes so that
+    # it's discovery address can be shared with the other nodes.
+    boot_node:
+        image: lighthouse:docker-testnet
+        volumes:
+            - ./lighthouse/repo:/root/lighthouse
+            - ./lighthouse/cargo-cache:/root/.cargo
+            - ./lighthouse/boot-node:/root/network
+        networks:
+            beacon_nodes:
+                ipv4_address: 172.42.0.250
+        ports:
+            - 9000:9000
+            - 5051:5051
+            - 5052:5052
+        command: sh run_beacon_node.sh
+        environment:
+            DISCOVERY_ADDR: "172.42.0.250"
+    beacon_node_1:
+        << : *beacon_node
+    beacon_node_2:
+        << : *beacon_node
+    beacon_node_3:
+        << : *beacon_node
+    beacon_node_4:
+        << : *beacon_node
+    validator_client_1:
+        << : *validator_client
+        environment:
+            BEACON_NODE: "beacon_node_1"
+            FIRST_VALIDATOR: 0
+            NUM_VALIDATORS: 4
+    validator_client_2:
+        << : *validator_client
+        environment:
+            BEACON_NODE: "beacon_node_2"
+            FIRST_VALIDATOR: 4
+            NUM_VALIDATORS: 4
+    validator_client_3:
+        << : *validator_client
+        environment:
+            BEACON_NODE: "beacon_node_3"
+            FIRST_VALIDATOR: 8
+            NUM_VALIDATORS: 4
+    validator_client_4:
+        << : *validator_client
+        environment:
+            BEACON_NODE: "beacon_node_4"
+            FIRST_VALIDATOR: 12
+            NUM_VALIDATORS: 4
+    #
+    # Metrics services -- provides a web GUI to monitor the testnet.
+    #
     prometheus:
         build:
             context: prometheus
@@ -18,114 +107,6 @@ services:
             - 3000:3000
         networks:
             - beacon_nodes
-    boot_node:
-        image: lighthouse:docker-testnet
-        volumes:
-            - ./lighthouse/repo:/root/lighthouse
-            - ./lighthouse/cargo-cache:/root/.cargo
-            - ./lighthouse/boot-node:/root/network
-        networks:
-            beacon_nodes:
-                ipv4_address: 172.42.0.250
-        ports:
-            - 9000:9000
-            - 5051:5051
-            - 5052:5052
-        command: sh run_beacon_node.sh
-        environment:
-            DISCOVERY_ADDR: "172.42.0.250"
-    beacon_node_1:
-        image: lighthouse:docker-testnet
-        volumes:
-            - ./lighthouse/repo:/root/lighthouse
-            - ./lighthouse/cargo-cache:/root/.cargo
-            - ./lighthouse/boot-node:/root/boot-node
-        networks:
-            - beacon_nodes
-        depends_on:
-            - boot_node
-        command: sh run_beacon_node.sh
-    beacon_node_2:
-        image: lighthouse:docker-testnet
-        volumes:
-            - ./lighthouse/repo:/root/lighthouse
-            - ./lighthouse/cargo-cache:/root/.cargo
-            - ./lighthouse/boot-node:/root/boot-node
-        networks:
-            - beacon_nodes
-        depends_on:
-            - boot_node
-        command: sh run_beacon_node.sh
-    beacon_node_3:
-        image: lighthouse:docker-testnet
-        volumes:
-            - ./lighthouse/repo:/root/lighthouse
-            - ./lighthouse/cargo-cache:/root/.cargo
-            - ./lighthouse/boot-node:/root/boot-node
-        networks:
-            - beacon_nodes
-        depends_on:
-            - boot_node
-        command: sh run_beacon_node.sh
-    beacon_node_4:
-        image: lighthouse:docker-testnet
-        volumes:
-            - ./lighthouse/repo:/root/lighthouse
-            - ./lighthouse/cargo-cache:/root/.cargo
-            - ./lighthouse/boot-node:/root/boot-node
-        networks:
-            - beacon_nodes
-        depends_on:
-            - boot_node
-        command: sh run_beacon_node.sh
-    validator_client_1:
-        image: lighthouse:docker-testnet
-        volumes:
-            - ./lighthouse/repo:/root/lighthouse
-            - ./lighthouse/cargo-cache:/root/.cargo
-        networks:
-            - beacon_nodes
-        environment:
-            BEACON_NODE: "beacon_node_1"
-            FIRST_VALIDATOR: 0
-            NUM_VALIDATORS: 4
-        command: sh run_validator_client.sh
-    validator_client_2:
-        image: lighthouse:docker-testnet
-        volumes:
-            - ./lighthouse/repo:/root/lighthouse
-            - ./lighthouse/cargo-cache:/root/.cargo
-        networks:
-            - beacon_nodes
-        environment:
-            BEACON_NODE: "beacon_node_2"
-            FIRST_VALIDATOR: 4
-            NUM_VALIDATORS: 4
-        command: sh run_validator_client.sh
-    validator_client_3:
-        image: lighthouse:docker-testnet
-        volumes:
-            - ./lighthouse/repo:/root/lighthouse
-            - ./lighthouse/cargo-cache:/root/.cargo
-        networks:
-            - beacon_nodes
-        environment:
-            BEACON_NODE: "beacon_node_3"
-            FIRST_VALIDATOR: 8
-            NUM_VALIDATORS: 4
-        command: sh run_validator_client.sh
-    validator_client_4:
-        image: lighthouse:docker-testnet
-        volumes:
-            - ./lighthouse/repo:/root/lighthouse
-            - ./lighthouse/cargo-cache:/root/.cargo
-        networks:
-            - beacon_nodes
-        environment:
-            BEACON_NODE: "beacon_node_4"
-            FIRST_VALIDATOR: 12
-            NUM_VALIDATORS: 4
-        command: sh run_validator_client.sh
 
 volumes:
     grafana-data:
