--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,8 @@ x-beacon_node:
     depends_on:
         - boot_node
     command: sh run_bootstrapped_node.sh
+    environment:
+        DEBUG_LEVEL: "warn"
 
 
 services:
@@ -54,6 +56,7 @@ services:
         environment:
             DISCOVERY_ADDR: "172.42.0.250"
             NUM_INITIAL_VALIDATORS: 16
+            DEBUG_LEVEL: "warn"
     beacon_node_1:
         << : *beacon_node
     beacon_node_2:
@@ -68,24 +71,28 @@ services:
             BEACON_NODE: "beacon_node_1"
             FIRST_VALIDATOR: 0
             NUM_VALIDATORS: 4
+            DEBUG_LEVEL: "warn"
     validator_client_2:
         << : *validator_client
         environment:
             BEACON_NODE: "beacon_node_2"
             FIRST_VALIDATOR: 4
             NUM_VALIDATORS: 4
+            DEBUG_LEVEL: "warn"
     validator_client_3:
         << : *validator_client
         environment:
             BEACON_NODE: "beacon_node_3"
             FIRST_VALIDATOR: 8
             NUM_VALIDATORS: 4
+            DEBUG_LEVEL: "warn"
     validator_client_4:
         << : *validator_client
         environment:
             BEACON_NODE: "beacon_node_4"
             FIRST_VALIDATOR: 12
             NUM_VALIDATORS: 4
+            DEBUG_LEVEL: "warn"
     #
     # Metrics services -- provides a web GUI to monitor the testnet.
     #
