--- a/.env
+++ b/.env
@@ -15,8 +15,8 @@ VALIDATOR_COUNT=1
 # otherwise the contract will reject the transaction.
 DEPOSIT_VALUE=3200000000
 
-# Set to `true` to submit the deposits to the eth1 chain.
-SEND_DEPOSITS=false
+# Set to anything other than empty to submit the deposits to the eth1 chain.
+SEND_DEPOSITS=
 
 # This node is used for submitting deposits and is required to have an account
 # with some Goerli ETH.
