Make validator client optional

--- a/.env
+++ b/.env
@@ -18,6 +18,9 @@ DEPOSIT_VALUE=3200000000
 # Set to anything other than empty to submit the deposits to the eth1 chain.
 SEND_DEPOSITS=
 
+# Set to anything other than empty to start the validator client.
+START_VALIDATOR=
+
 # This node is used for submitting deposits and is required to have an account
 # with some Goerli ETH.
 #
