--- a/default.env
+++ b/default.env
@@ -14,9 +14,15 @@ START_VALIDATOR=
 # The number of validators that should be created on first boot.
 VALIDATOR_COUNT=1
 
+# Set to anything other than empty to start a geth instance.
+#
+# Only required if `VALIDATOR_COUNT` is greater than zero or `VOTING_ETH1_NODE`
+# is not set to some external geth node.
+START_GETH=
+
 # This is the node that beacon nodes should use whilst they are running and
 # producing blocks. Does not require any accounts.
-VOTING_ETH1_NODE=http://127.0.0.1:8545
+VOTING_ETH1_NODE=http://geth:8545
 
 # The amount in gwei that will be deposited to initialize the validator.
 #
