Fix typos in readme and default.env

--- a/default.env
+++ b/default.env
@@ -8,7 +8,7 @@ START_VALIDATOR=
 
 # Validator settings
 #
-# The following setting are only required if `START_VALIDATOR` is enabled and
+# The following settings are only required if `START_VALIDATOR` is enabled and
 # `VALIDATOR_COUNT` is greater than zero.
 
 # The number of validators that should be created on first boot.
