Handle testnets and move chain dir

--- a/default.env
+++ b/default.env
@@ -3,6 +3,10 @@
 # Set to `debug` or `trace` for detailed information.
 DEBUG_LEVEL=info
 
+# To specify a specific testnet (Lighthouse defaults to the latest running
+# public testnet) set this value. Allowed values are: altona or medalla
+TESTNET=
+
 # Set to anything other than empty to start the validator client.
 START_VALIDATOR=
 
