Add $GRAFFITI to default.env

--- a/default.env
+++ b/default.env
@@ -7,6 +7,9 @@ DEBUG_LEVEL=info
 # public testnet) set this value. Allowed values are: altona or medalla
 TESTNET=
 
+# Adds an arbitary string to the proposing block
+GRAFFITI=
+
 # Set to anything other than empty to start the validator client.
 START_VALIDATOR=
 
