Dont let lighthouse create keys. Instead assume that user adds keys to lighthouse-data/validators/

--- a/default.env
+++ b/default.env
@@ -5,13 +5,13 @@ DEBUG_LEVEL=info
 
 # To specify a specific testnet (Lighthouse defaults to the latest running
 # public testnet) set this value. Allowed values are: altona or medalla
-TESTNET=
+TESTNET=medalla
 
 # Add an arbitary string to the proposing block
 GRAFFITI=
 
 # Set to anything other than empty to start the validator client.
-START_VALIDATOR=
+START_VALIDATOR=true
 
 # Validator settings
 #
@@ -19,13 +19,13 @@ START_VALIDATOR=
 # `VALIDATOR_COUNT` is greater than zero.
 
 # The number of validators that should be created on first boot.
-VALIDATOR_COUNT=1
+#VALIDATOR_COUNT=1
 
 # Set to anything other than empty to start a geth instance.
 #
 # Only required if `VALIDATOR_COUNT` is greater than zero or `VOTING_ETH1_NODE`
 # is not set to some external geth node.
-START_GETH=
+START_GETH=true
 
 # This is the node that beacon nodes should use whilst they are running and
 # producing blocks. Does not require any accounts.
