store geth files locally
have geth data files on the same place as lighthouse data

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
         build:
             context: geth
         volumes:
-            - geth:/root/.ethereum
+            - ./geth-data:/root/.ethereum
             - ./scripts:/root/scripts
         ports:
             - 30303:30303/tcp
