Add support for different datadirs for multiple networks

--- a/default.env
+++ b/default.env
@@ -3,8 +3,11 @@
 # Set to `debug` or `trace` for detailed information.
 DEBUG_LEVEL=info
 
+# Specify the default testnet for setting the right directories.
+DEFAULT_TESTNET=medalla
+
 # To specify a specific testnet (Lighthouse defaults to the latest running
-# public testnet) set this value. Allowed values are: altona or medalla
+# public testnet) set this value. Allowed values are: altona, medalla and spadina
 TESTNET=
 
 # Add an arbitary string to the proposing block
